fixed cards alignment

--- a/personal/static/personal/css/bootstrap.css
+++ b/personal/static/personal/css/bootstrap.css
@@ -4468,14 +4468,12 @@ input[type="button"].btn-block {
 
 .card-img-top {
   width: 100%;
-  height: 50%;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
 
 .card-img-bottom {
   width: 100%;
-  height: 50%;
   border-bottom-right-radius: calc(0.25rem - 1px);
   border-bottom-left-radius: calc(0.25rem - 1px);
 }
